Fix badge alignment on mobile view

--- a/static/sass/_pattern_cube-table.scss
+++ b/static/sass/_pattern_cube-table.scss
@@ -105,6 +105,13 @@
   }
 }
 
+.p-table--cube__badge-column {
+  @media only screen and (min-width: $breakpoint-medium) {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 .p-table--cube__badge {
   @media only screen and (max-width: $breakpoint-medium) {
     margin-top: -0.4rem !important;
